# calculator-files

./: gauss_elimination_README.md  gbc4nspire.tns  prepare_nspire_transfer.py  process_csv.py
BrogueCE/: Makefile.nspire  brogue.elf  brogue.tns  build.bat  build.sh  wsl_build.sh
PocketSNES_nspire/: PocketSNES_139.tns  PocketSNES_139_minimal.tns  PocketSNES_143.tns  PocketSNES_143APU.tns  README.txt.tns
angband/: CMakeLists.txt  angband.tns  build.bat  build.sh  config.status  configure.ac  wsl_build.sh
angband/lib/customize/: pref.prf.tns
angband/lib/gamedata/: hints.txt.tns
angband/lib/help/: commands.txt.tns  index.txt.tns  r_comm.txt.tns  r_index.txt.tns
angband/lib/screens/: news.txt.tns
angband/mk/: buildsys.mk  extra.mk
angband/src/: .deps  Makefile  Makefile.nspire  Makefile.src  angband.elf  angband.tns  autoconf.h  buildid.dep  cave-map.c  cave-map.dep  cave-square.c  cave-view.c  cave.h  cmd-cave.c  cmd-cave.dep  list-options.h  list-square-flags.h  main-gcu.dep  main-nspire.c  main-spoil.dep  main-x11.dep  main.dep  obj-make.c  player-path.c  player-path.dep  player-path.h  player-util.c  player-util.dep  player.h  savefile.c  ui-birth.c  ui-command.c  ui-command.dep  ui-game.c  ui-game.dep  ui-help.c  ui-map.c  ui-map.dep  ui-options.c  ui-score.c  (+7 more)
angband/src/nspire/: KEYBINDINGS.md  dirent.h  keybindings.html.tns  keybindings.pdf.tns  nspire-compat.h  nspire-draw.c  nspire-draw.h  nspire-event.c  nspire-event.h  nspire-fopen.c  nspire-input.c  nspire-input.h  nspire-mem-alt.c  syscall-decls.h
app_manager/: Makefile  app_manager.elf  (+4 more)
(+175 files in other folders)
