dnl configure.ac – TI-Nspire CX II (Ndless) build
dnl
dnl This project targets the TI-Nspire CX II running Ndless exclusively.
dnl Autotools is not used; the sole build system is:
dnl
dnl   cd src && make -f Makefile.nspire
dnl
dnl Prerequisites:
dnl   export PATH=$PATH:/path/to/ndless-sdk/bin
dnl

AC_INIT([Angband],[4.2.6],[bugs@rephial.org])
AC_MSG_ERROR([This build is for the TI-Nspire CX II (Ndless) only.
Use:  cd src && make -f Makefile.nspire
See build.sh for the full build script.])
